Update ambassador dashboard template
- Kill inline styles
- Push logic out of templates

--- a/app/views/organized/ambassador_dashboards/show.html.haml
+++ b/app/views/organized/ambassador_dashboards/show.html.haml
@@ -1,4 +1,4 @@
-%h2.header-font-uncap
+%h1.header-font-uncap
   Welcome to your Ambassador homepage
 
 %p
@@ -21,14 +21,12 @@
   #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
 
 - if @suggested_activities.present?
-  %h2{ style: "margin-top: 40px;" }
-    Suggested Activities
-  %table.table.table-striped.table-bordered.ambassador-tasks-table{ style: "margin-top: 40px;" }
+  %h2 Suggested Activities
+  %table.table.table-striped.table-bordered.ambassador-tasks-table
     %thead.small-header
       %tr
         %th Activity
-        - if current_user.ambassador?
-          %th Actions
+        %th Actions
     %tbody
       - @suggested_activities.each do |task|
         %tr
@@ -36,17 +34,11 @@
             %strong= task.title
             %br
             = task.description_html.html_safe
-          - if current_user.ambassador?
-            %td
-              - label = task.completed? ? "Pending" : "Complete"
-              = button_to "Mark #{label}",
-              organization_ambassador_task_assignment_url(current_organization, task),
-              method: :put,
-              params: {completed: !task.completed?}
+          %td
+            = task.button_to_toggle_completion_status(current_user, current_organization)
 
 - if @completed_activities.present?
-  %h2{ style: "margin-top: 40px;" }
-    Completed activities
+  %h2 Completed activities
   %table.table.table-striped.table-bordered.ambassador-tasks-table
     %thead.small-header
       %tr
@@ -63,9 +55,7 @@
             %span.convertTime= l task.completed_at, format: :convert_time
 
 
-%h2{ style: "margin-top: 40px;" }
-  Leaderboard
-
+%h2 Leaderboard
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
   %thead.small-header
     %tr
