Navigate to admin_tweet_path using id
The index endpoint links to a given tweet's edit page using the record's
tweet_id rather than its id.

This makes some tweets unreachable via the UI (if more than one record with the
same tweet_id is persisted).

--- a/app/views/admin/tweets/index.html.haml
+++ b/app/views/admin/tweets/index.html.haml
@@ -23,7 +23,7 @@
       - @tweets.each do |tweet|
         %tr
           %td
-            %a.convertTime{ href: admin_tweet_path(tweet.twitter_id) }
+            %a.convertTime{ href: admin_tweet_path(tweet.id) }
               = l tweet.created_at, format: :convert_time
           %td
             %small.less-strong
