--- a/app/views/admin/stolen_bikes/index.html.haml
+++ b/app/views/admin/stolen_bikes/index.html.haml
@@ -1,4 +1,3 @@
-
 .row
   .col-sm
     %h1
@@ -77,17 +76,17 @@
                 = current_stolen_record.city
             %td.table-cell-check
               = "&#x2713;".html_safe if current_stolen_record.approved
-              - if bike.owner.donor?
+              - if bike.owner&.donor?
                 <span class="donor-icon">D</span>
-              - elsif bike.owner.paid_org?
+              - elsif bike.owner&.paid_org?
                 <span class="paid-org-icon">O</span>
           - else
             %td
             %td
             %td
-              - if bike.owner.donor?
+              - if bike.owner&.donor?
                 <span class="donor-icon">D</span>
-              - elsif bike.owner.paid_org?
+              - elsif bike.owner&.paid_org?
                 <span class="paid-org-icon">O</span>
 
 
