--- a/app/views/organized/ambassador_dashboards/show.html.haml
+++ b/app/views/organized/ambassador_dashboards/show.html.haml
@@ -1,48 +1,51 @@
-%h2.header-font-uncap
+%h1.header-font-uncap
   Welcome to your Ambassador homepage
-%p
-  This page contains the resources you need to become a great bike advocate in your community. Here you will find documents, tips, articles, and recommendations for helping cyclists where you live and connecting with Ambassadors around the world doing the same in their communities.
-%p
-  Being a Bike Index Ambassador means helping people, where you live, to register and protect their bikes in case of theft. Share Bike Index with bike shops, advocacy groups, universities, and law enforcement to aid larger numbers and more kinds of cyclists in your area.
-%p
-  On this page, we’ve listed effective activities for registering cyclists in Bike Index. You can track progress and get ideas from other Ambassadors in your area about successful strategies. If you have any questions, post them in our Slack channel or email #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
 
-%h2{ style: "margin-top: 40px;" }
-  Suggested Activities
-%table.table.table-striped.table-bordered.ambassador-tasks-table{ style: "margin-top: 40px;" }
-  %thead.small-header
-    %tr
-      %th Activity
-      %th Completed?
-  %tbody#js-task-assignments
-    - if current_user.ambassador?
-      - ambassador_task_assignments = @ambassador_task_assignments.pending_completion
-    - else
-      - ambassador_task_assignments = AmbassadorTask.task_ordered
-    - ambassador_task_assignments.each do |task|
+%p
+  This page contains the resources you need to become a great bike advocate in
+  your community. Here you will find documents, tips, articles, and
+  recommendations for helping cyclists where you live and connecting with
+  Ambassadors around the world doing the same in their communities.
+
+%p
+  Being a Bike Index Ambassador means helping people, where you live, to
+  register and protect their bikes in case of theft. Share Bike Index with bike
+  shops, advocacy groups, universities, and law enforcement to aid larger
+  numbers and more kinds of cyclists in your area.
+
+%p
+  On this page, we've listed effective activities for registering cyclists in
+  Bike Index. You can track progress and get ideas from other Ambassadors in
+  your area about successful strategies. If you have any questions, post them in
+  our Slack channel or email
+  #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
+
+- if @suggested_activities.present?
+  %h2 Suggested Activities
+  %table.table.table-striped.table-bordered.ambassador-tasks-table
+    %thead.small-header
       %tr
-        %td
-          %strong= task.title
-          %br
-          = task.description_html.html_safe
-        %td
-          - if current_user.ambassador?
-            %input{ "data-update-url"=> organization_ambassador_task_assignment_url(current_organization, task, format: :json),
-                    "data-ambassador-task-assignment-id" => task.id,
-                    type: "checkbox",
-                    checked: (task.completed? ? "checked" : nil) }
+        %th Activity
+        %th Actions
+    %tbody
+      - @suggested_activities.each do |task|
+        %tr
+          %td
+            %strong= task.title
+            %br
+            = task.description_html.html_safe
+          %td
+            = task.button_to_toggle_completion_status(current_user, current_organization)
 
-
-- if current_user.ambassador? && @ambassador_task_assignments.locked_completed.any?
-  %h2{ style: "margin-top: 40px;" }
-    Completed activities
+- if @completed_activities.present?
+  %h2 Completed activities
   %table.table.table-striped.table-bordered.ambassador-tasks-table
     %thead.small-header
       %tr
         %th Activity
         %th Completed
-    %tbody#js-task-assignments
-      - @ambassador_task_assignments.locked_completed.each do |task|
+    %tbody
+      - @completed_activities.each do |task|
         %tr
           %td
             %strong= task.title
@@ -52,9 +55,7 @@
             %span.convertTime= l task.completed_at, format: :convert_time
 
 
-%h2{ style: "margin-top: 40px;" }
-  Leaderboard
-
+%h2 Leaderboard
 %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
   %thead.small-header
     %tr
