--- a/app/views/admin/recoveries/edit.html.haml
+++ b/app/views/admin/recoveries/edit.html.haml
@@ -1,10 +1,12 @@
-
-%h1
-  Edit recovery for #{@bike.type}
-%p
-  = link_to "Back to recoveries", admin_recoveries_url
-%p
-  = link_to "Edit bike", edit_admin_bike_path(@bike), class: "btn btn-success float-right mb-4"
+.row
+  .col-md-10
+    %p
+      = link_to "Back to recoveries", admin_recoveries_url
+    %h1
+      Edit recovery for #{@bike.type}
+  .col-md-2
+    %p
+      = link_to "Edit bike", edit_admin_bike_path(@bike), class: "btn btn-success mb-4 float-right"
 
 
 
@@ -50,7 +52,7 @@
   - if @recovery.recovery_display.present?
     = link_to "Recovery displayed", edit_admin_recovery_display_url(@recovery.recovery_display)
   - else
-    = link_to 'Display recovery', new_admin_recovery_display_url(stolen_record_id: @recovery.id), class: 'btn btn-primary mb-4'
+    = link_to "Don't Display", new_admin_recovery_display_url(stolen_record_id: @recovery.id), class: "btn btn-warning"
     - if @recovery.recovery_posted
       Recovery posted
 
@@ -63,15 +65,20 @@
 %hr
 - url = {action: "update", controller: "recoveries"}
 = form_for([:admin, @recovery], :url => url , html: { class: "form form-horizontal" }) do |f|
-  - if @recovery.errors.any?
-    = render partial: "/shared/errors", locals: { name: "Recovery", obj: @recovery}
-  .form-group
-    = f.label :index_helped_recovery
-    = f.check_box :index_helped_recovery
+  .row
+    .col-md-6
+      - if @recovery.errors.any?
+        = render partial: "/shared/errors", locals: { name: "Recovery", obj: @recovery}
+      .form-group
+        = f.label :index_helped_recovery
+        = f.check_box :index_helped_recovery
 
-  .form-group
-    = f.label :can_share_recovery
-    = f.check_box :can_share_recovery
+      .form-group
+        = f.label :can_share_recovery
+        = f.check_box :can_share_recovery
+      = submit_tag "Update the recovery", class: "btn btn-success"
+
+
 
 
   / .control-group.recovery-input-field
