--- a/app/views/admin/recoveries/index.html.haml
+++ b/app/views/admin/recoveries/index.html.haml
@@ -74,12 +74,19 @@
                   - if recovery.estimated_value.present?
                     %small.less-strong
                       $#{recovery.estimated_value}
-
             %td
               - if recovery.recovered_description.present?
                 = recovery.recovered_description
               .less-strong
                 = recovery.theft_description.truncate(200) if recovery.theft_description.present?
+              - if recovery.recovering_user.present?
+                %br
+                %small.less-strong
+                  Recovered by
+                  = link_to recovery.recovering_user.display_name, admin_user_path(recovery.recovering_user.to_param)
+                  - unless recovery.recovering_user_owner?
+                    %span.text-warning
+                      not owner!
             %td
               - if recovery.address.present?
                 = recovery.city
