--- a/app/views/layouts/application_revised.html.haml
+++ b/app/views/layouts/application_revised.html.haml
@@ -20,6 +20,7 @@
           %span.current-organization-nav-item
             %a#passive_organization_submenu{ "aria-haspopup" => "true", "aria-expanded" => "false", data: { toggle: "dropdown" } }
               = passive_organization.short_name
+              = passive_organization.short_name
               <span class="caret-down">v</span>
             %ul.current-organization-submenu{ "aria-labelledby" => "#passive_organization_submenu" }
               - if passive_organization.ambassador?
@@ -97,9 +98,6 @@
               %ul.primary-submenu{ 'aria-labelledby' => '#setting_submenu' }
                 - memberships = current_user_or_unconfirmed_user.memberships.includes(:organization)
                 - if memberships.any?
-                  %li
-                    %span.text-nav-item
-                      #{"Organization".pluralize(memberships.count)} you're a member of:
                   - memberships.each do |membership|
                     - organization = membership.organization
                     %li
