Punt on implementing sorting by organization name

--- a/app/views/admin/ambassador_task_assignments/index.html.haml
+++ b/app/views/admin/ambassador_task_assignments/index.html.haml
@@ -15,7 +15,7 @@
   %table.table.table-striped.table-bordered.table-sm.without-exterior-border
     %thead.small-header
       %th= sortable "completed_at"
-      %th= sortable "organization_name"
+      %th Organization
       %th= sortable "task_title"
       %th= sortable "ambassador_name"
     %tbody
