add pinhead, waiting on logo

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -84,7 +84,7 @@
           .root-landing-who-rectangle
             = image_tag 'landing_pages/partners/Bike-Theft-Task-Force-Portland.png', alt: 'Portland Bike Theft taskforce'
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Santa-Monica-PD.png', alt: 'Santa Monica Police Department'
+            = image_tag 'landing_pages/partners/Pinhead.png', alt: 'Pinhead locks'
 
           .root-landing-who-square
             = image_tag 'landing_pages/partners/St-Louis-PD.png', alt: 'St. Louis PD'
@@ -99,6 +99,6 @@
           .root-landing-who-rectangle
             = image_tag 'landing_pages/partners/Mission-Bicycle-Company.png', alt: 'Mission Bicycle Company'
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/BYU.png', alt: 'Brigham Young University'
+            = image_tag 'landing_pages/partners/Santa-Monica-PD.png', alt: 'Santa Monica Police Department'
           .root-landing-who-square
             = image_tag 'landing_pages/partners/Bike-Portland.png', alt: 'Bike Portland'
