add Jan to the about page

--- a/app/views/info/about.html.haml
+++ b/app/views/info/about.html.haml
@@ -87,10 +87,17 @@
       has a master's degree from Medill School of Journalism but realized along the way that bikes are the most deserving recipients of words. She writes and communicates for Bike Index.
   %li
     %p
+      = image_tag "who/jan-pecnik.jpg", alt: "Jan Pecnik"
+      %strong
+        Jan Pecnik
+      fell in love with bikes while studying his masters in the Netherlands, focusing on social entrepreneurship. After a couple of years of solo riding, he now helps Bike Index expand across Europe and beyond.
+  %li
+    %p
       = image_tag 'who/mike-oleon.jpg', alt: 'Mike Oleon'
       %strong
         Mike Oleon
       does the graphic design and illustration for the Index. If anything looks good, it's probably his fault.
+
 
 %h2.the-alumni
   Alumni
