--- a/app/views/admin/ambassador_task_assignments/index.html.haml
+++ b/app/views/admin/ambassador_task_assignments/index.html.haml
@@ -22,7 +22,7 @@
 
       .form-group.ml-2
         = select_tag :organization_id, |
-          options_from_collection_for_select(Organization.ambassador, "id", "name"), |
+          options_from_collection_for_select(Organization.ambassador, "id", "name", params[:organization_id]), |
           prompt: "Filter by organization", |
           class: "form-control"
 
@@ -35,16 +35,19 @@
   %table.table.table-striped.table-bordered.table-sm.without-exterior-border
     %thead.small-header
       %th= sortable "completed_at"
-      %th Organization
+      %th= sortable "organization_name"
       %th= sortable "task_title"
       %th= sortable "ambassador_name"
     %tbody
       - @ambassador_task_assignments.each do |assignment|
         %tr
           %td.convertTime= l(assignment.completed_at, format: :convert_time)
-          %td= assignment.organization_name
-          %td= assignment.title
-          %td= assignment.ambassador_name
+          %td= link_to assignment.organization_name, |
+          admin_ambassador_task_assignments_path(sortable_search_params.merge(organization_id: assignment.organization.id))
+          %td= link_to assignment.title, |
+          admin_ambassador_task_assignments_path(sortable_search_params.merge(ambassador_task_id: assignment.ambassador_task_id))
+          %td= link_to assignment.ambassador_name, |
+          admin_ambassador_task_assignments_path(sortable_search_params.merge(ambassador_id: assignment.user_id))
 
 
 = paginate @ambassador_task_assignments, views_prefix: "admin"
