--- a/app/views/admin/recoveries/edit.html.haml
+++ b/app/views/admin/recoveries/edit.html.haml
@@ -52,7 +52,6 @@
   - if @recovery.recovery_display.present?
     = link_to "Recovery displayed", edit_admin_recovery_display_url(@recovery.recovery_display)
   - else
-    = link_to "Don't Display", new_admin_recovery_display_url(stolen_record_id: @recovery.id), class: "btn btn-warning"
     - if @recovery.recovery_posted
       Recovery posted
 
@@ -64,9 +63,10 @@
 
 %hr
 - url = {action: "update", controller: "recoveries"}
-= form_for([:admin, @recovery], :url => url , html: { class: "form form-horizontal" }) do |f|
-  .row
-    .col-md-6
+.row
+  .col-md-6
+    = form_for([:admin, @recovery], :url => url , html: { class: "form form-horizontal" }) do |f|
+
       - if @recovery.errors.any?
         = render partial: "/shared/errors", locals: { name: "Recovery", obj: @recovery}
       .form-group
@@ -76,9 +76,12 @@
       .form-group
         = f.label :can_share_recovery
         = f.check_box :can_share_recovery
+      .form-group
+        = f.label :recovery_display_status, "Undisplayable"
+        = f.check_box :recovery_display_status
       = submit_tag "Update the recovery", class: "btn btn-success"
-
-
+  .col-md-6
+    = link_to "Don't Display", new_admin_recovery_display_url(stolen_record_id: @recovery.id), class: "btn btn-warning"
 
 
   / .control-group.recovery-input-field
