--- a/app/views/admin/ambassador_task_assignments/index.html.haml
+++ b/app/views/admin/ambassador_task_assignments/index.html.haml
@@ -21,7 +21,7 @@
       = hidden_field_tag :sort_direction, sort_direction
 
       .form-group.ml-2
-        = select_tag :organization_id, |
+        = select_tag :search_organization_id, |
           options_from_collection_for_select(Organization.ambassador, "id", "name", organization_filter), |
           prompt: "Filter by organization", |
           class: "form-control"
