Move #display_phone to ApplicationHelper

--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -311,7 +311,7 @@
               = location.name
             %p
               Phone:
-              = location.display_phone
+              = display_phone(location.phone)
             %p
               Address:
               = location.address
