--- a/app/views/info/where.html.haml
+++ b/app/views/info/where.html.haml
@@ -28,7 +28,6 @@
       %ul.state-list
         - state.locations.each do |location|
           - next unless location.shown
-          - location = location.decorate
           %li
             .collapse-faq
               %a.shop-title-link.collapsed{ href: "#shop#{location.org_location_id}", data: { toggle: "collapse"} }
@@ -46,7 +45,7 @@
               - if location.phone
                 %p
                   %a{ href: "tel:#{ location.phone }" }
-                    = location.display_phone
+                    = display_phone(location.phone)
               - if location&.organization&.website.present?
                 %p
                   = link_to "#{location.organization.name} website", location.organization.website, target: "_blank", class: "shop-site"
@@ -72,7 +71,6 @@
       %ul.state-list
         - country.locations.each do |location|
           - next unless location.shown
-          - location = location.decorate
           %li
             .collapse-faq
               %a.shop-title-link.collapsed{ href: "#shop#{location.org_location_id}", data: { toggle: "collapse"} }
@@ -90,7 +88,7 @@
               - if location.phone
                 %p
                   %a{ href: "tel:#{ location.phone }" }
-                    = location.display_phone
+                    = display_phone(location.phone)
               - if location&.organization&.website.present?
                 %p
                   = link_to "#{location.organization.name} website", location.organization.website, target: "_blank", class: "shop-site"
