--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,7 +15,7 @@
               - else
                 This user's bikes
             %p.sharing-links
-              = @user.show_twitter_and_website(@user)
+              = show_twitter_and_website(@user)
       .col-md-6.ad-col
         .ad-block#top468x60
     - if @user.description
