--- a/app/views/admin/organizations/invoices/_table.html.haml
+++ b/app/views/admin/organizations/invoices/_table.html.haml
@@ -41,9 +41,10 @@
         Features
     %tbody
       - invoices.each do |invoice|
+        - organization = Organization.find(invoice.organization_id)
         %tr
           %td
-            = link_to invoice.display_name, edit_admin_organization_invoice_path(organization_id: invoice.organization.to_param, id: invoice.to_param)
+            = link_to invoice.display_name, edit_admin_organization_invoice_path(organization_id: organization.to_param, id: invoice.to_param)
             - if invoice.active?
               %small.text-success{ style: "display: block;" }
                 Active
@@ -52,7 +53,10 @@
                 Follows ##{invoice.previous_invoice.id}
           - if display_organization
             %td
-              = link_to invoice.organization.short_name, admin_organization_path(invoice.organization)
+              = link_to organization.short_name, admin_organization_path(organization.to_param)
+              - unless invoice.organization.present?
+                %small.text-danger
+                  organization is deleted!
           %td
             - if invoice.subscription_start_at.present?
               %span.convertTime
