--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -129,8 +129,17 @@
             - if task.completed_at
               %span.convertTime= l task.completed_at, format: :convert_time
 .mt-4
-%h3
-  Bikes
+.row.mt-4
+  .col-md-6
+    %h3
+      Bikes
+    %strong
+      User has
+      = @bikescount
+      Bikes
+  - if @bikescount > 10
+    .col-md-6.mt-auto
+      = link_to "Show all bikes", admin_bikes_path(search_user_id: @user.id), class: "float-right"
 = render partial: "admin/bikes/admin_bikes_table", locals: {bikes: @bikes}
 
 %h3
