--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -132,11 +132,7 @@
 .row.mt-4
   .col-md-6
     %h3
-      Bikes
-    %strong
-      User has
-      = @bikescount
-      Bikes
+      User has #{ pluralize(@bikescount, "bike") }
   - if @bikescount > 10
     .col-md-6.mt-auto
       = link_to "Show all bikes", admin_bikes_path(search_user_id: @user.id), class: "float-right"
