--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -13,9 +13,10 @@
       %li.nav-item
         - stolen_active = params[:search_stolen].present?
         = link_to "stolen", admin_bikes_path(sortable_search_params.merge(search_stolen: stolen_active ? nil : true)), class: "nav-link #{stolen_active ? 'active' : ''}"
-      %li.nav-item
-        - example_active = params[:search_example].present?
-        = link_to "example", admin_bikes_path(sortable_search_params.merge(search_non_example: nil, search_example: example_active ? nil : true)), class: "nav-link #{example_active ? 'active' : ''}"
+      - if !@user.present?
+        %li.nav-item
+          - example_active = params[:search_example].present?
+          = link_to "example", admin_bikes_path(sortable_search_params.merge(search_non_example: nil, search_example: example_active ? nil : true)), class: "nav-link #{example_active ? 'active' : ''}"
       %li.nav-item
         - non_example_active = params[:search_non_example].present?
         = link_to "non-example", admin_bikes_path(sortable_search_params.merge(search_example: nil, search_non_example: non_example_active ? nil : true)), class: "nav-link #{non_example_active ? 'active' : ''}"
@@ -81,6 +82,10 @@
       %strong
         = number_with_delimiter(@bikes.total_count)
       = "Matching Bike".pluralize(@bikes.total_count)
+      - if @user.present?
+        %strong
+          Owned by
+          = link_to "#{@user.email}", admin_user_path(@user)
   .col-md-7
     = form_tag admin_bikes_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort
