Fix NoMethodError exceptions in admin templates
This patch resolves some breakages in the admin templates that are showing up
locally.

- Refactors to check for the presence of the associated record, not just its
  foreign key (+ `includes` to avoid an N+1 query)

```diff
- - if payment.organization_id.present?
+ - if payment.organization.present?
    = link_to payment.organization.short_name, admin_organization_path(payment.organization)
```

```diff
-    @invoices = invoices.includes(:organization, :payments)
-      .reorder(sort_column + " " + sort_direction).page(page).per(per_page)
+    @invoices =
+      invoices
+        .includes(:organization, :payments, :paid_features, :first_invoice)
+        .reorder(sort_column + " " + sort_direction)
+        .page(page)
+        .per(per_page)
```

- Uses safe traversal operator when accessing deeply nested attributes

```diff
   %td.medium-screens
-    = blog.user.name || blog.user.email
+    = blog.user&.name || blog.user&.email
```

- Ensures url helpers have expected data

```diff
- - if display_organization
+ - if display_organization && invoice.organization.present?
    %td
    = link_to invoice.organization.short_name, admin_organization_path(invoice.organization)
```

--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -23,7 +23,7 @@
             %span.convertTime
               = l blog.published_at, format: :convert_time
           %td.medium-screens
-            = blog.user.name || blog.user.email
+            = blog.user&.name || blog.user&.email
           %td
             %p.blog-index
               = link_to blog.title, edit_admin_news_url(blog)
