--- a/app/views/admin/bike_codes/index.html.haml
+++ b/app/views/admin/bike_codes/index.html.haml
@@ -107,17 +107,17 @@
       - @bike_codes.each do |bike_code|
         %tr
           %td
-            - if bike_code.organization_id.present?
+            - if bike_code.organization.present?
               - bike_code_url = edit_organization_sticker_path(organization_id: bike_code.organization_id, id: bike_code.code)
             - else
               - bike_code_url = "/bikes/scanned/#{bike_code.code}"
             %a.convertTime{ href: bike_code_url }
               = l bike_code.created_at, format: :convert_time
           %td
-            - if bike_code.organization_id.present?
+            - if bike_code.organization.present?
               = link_to bike_code.organization.name, admin_bike_codes_path(sortable_search_params.merge(organization_id: bike_code.organization_id))
           %td
-            - if bike_code.bike_code_batch_id.present?
+            - if bike_code.bike_code_batch.present?
               = link_to bike_code.bike_code_batch_id, admin_bike_codes_path(sortable_search_params.merge(search_bike_code_batch_id: bike_code.bike_code_batch_id))
           %td
             - if bike_code.claimed? && bike_code.claimed_at.present?
