--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -43,7 +43,7 @@
                 other_links = [
                                 { title: "POS Integration", path: "https://posintegration.bikeindex.org", match_controller: false },
                                 { title: "Ambassador Tasks", path: admin_ambassador_tasks_path, match_controller: true },
-                                { title: "Ambassador Task Assignments", path: admin_ambassador_task_assignments_path, match_controller: true },
+                                { title: "Completed Ambassador Tasks", path: admin_ambassador_task_assignments_path, match_controller: true },
                                 { title: "Payments", path: admin_payments_path, match_controller: true },
                                 { title: "Paid Features", path: admin_paid_features_path, match_controller: true },
                                 { title: "Invoices", path: admin_invoices_path, match_controller: true },
