--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -70,35 +70,35 @@
 
         .root-landing-who-wrap
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/UMD.png', alt: 'University of Maryland'
+            = image_tag "landing_pages/partners/UMD.png", alt: "University of Maryland"
           .root-landing-who-rectangle
-            = image_tag 'landing_pages/partners/Bike-East-Bay.png', alt: 'Bike East Bay'
+            = image_tag "landing_pages/partners/Bike-East-Bay.png", alt: "Bike East Bay"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/University-of-Washington.png', alt: 'University of Washington'
+            = image_tag "landing_pages/partners/University-of-Washington.png", alt: "University of Washington"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Bike-Pittsburgh.png', alt: 'Bike Pittsburgh'
+            = image_tag "landing_pages/partners/Bike-Pittsburgh.png", alt: "Bike Pittsburgh"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/SFPD.png', alt: 'San Francisco Police Department'
+            = image_tag "landing_pages/partners/SFPD.png", alt: "San Francisco Police Department"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Wisconsin-Bike-Fed.png', alt: 'Wisconsin Bike Federation'
+            = image_tag "landing_pages/partners/Wisconsin-Bike-Fed.png", alt: "Wisconsin Bike Federation"
           .root-landing-who-rectangle
-            = image_tag 'landing_pages/partners/Bike-Theft-Task-Force-Portland.png', alt: 'Portland Bike Theft taskforce'
+            = image_tag "landing_pages/partners/Bike-Theft-Task-Force-Portland.png", alt: "Portland Bike Theft taskforce"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Pinhead.png', alt: 'Pinhead locks'
+            = link_to image_tag("landing_pages/partners/Pinhead.png", alt: "Pinhead locks"), "https://pinheadlocks.com/"
 
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/St-Louis-PD.png', alt: 'St. Louis PD'
+            = image_tag "landing_pages/partners/St-Louis-PD.png", alt: "St. Louis PD"
           .root-landing-who-rectangle
-            = image_tag 'landing_pages/partners/Seattle-Bike-Blog.png', alt: 'Seattle Bike Blog'
+            = image_tag "landing_pages/partners/Seattle-Bike-Blog.png", alt: "Seattle Bike Blog"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Sunnyvale.png', alt: 'Sunnyvale'
+            = image_tag "landing_pages/partners/Sunnyvale.png", alt: "Sunnyvale"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Stolen-Bikes-NOLA.png', alt: 'Stolen Bikes NOLA'
+            = image_tag "landing_pages/partners/Stolen-Bikes-NOLA.png", alt: "Stolen Bikes NOLA"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/City-of-Bend.png', alt: 'City of Bend'
+            = image_tag "landing_pages/partners/City-of-Bend.png", alt: "City of Bend"
           .root-landing-who-rectangle
-            = image_tag 'landing_pages/partners/Mission-Bicycle-Company.png', alt: 'Mission Bicycle Company'
+            = image_tag "landing_pages/partners/Mission-Bicycle-Company.png", alt: "Mission Bicycle Company"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Santa-Monica-PD.png', alt: 'Santa Monica Police Department'
+            = image_tag "landing_pages/partners/Santa-Monica-PD.png", alt: "Santa Monica Police Department"
           .root-landing-who-square
-            = image_tag 'landing_pages/partners/Bike-Portland.png', alt: 'Bike Portland'
+            = link_to image_tag("landing_pages/partners/Bike-Portland.png", alt: "Bike Portland"), "https://bikeeastbay.org/Register"
