--- a/app/views/admin/ambassador_tasks/edit.html.haml
+++ b/app/views/admin/ambassador_tasks/edit.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1 Edit Ambassador Task
+  %h1 Edit Ambassador Activity
 
   = render "form",
     ambassador_task: @ambassador_task,
