--- a/app/views/admin/ambassador_tasks/index.html.haml
+++ b/app/views/admin/ambassador_tasks/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Ambassador Tasks
+%h1 Ambassador Activities
 
-%p= link_to "New Task", new_admin_ambassador_task_path
+%p= link_to "New Activity", new_admin_ambassador_task_path
 
 %table.table.table-striped.table-bordered.ambassador-tasks-table
   %thead.small-header
