Make Message kinds variable plural (#871)

--- a/app/views/organized/messages/index.html.haml
+++ b/app/views/organized/messages/index.html.haml
@@ -1,6 +1,6 @@
 .organized-page-header
   %h1
-    #{[@kind].flatten.map(&:titleize).join(", ")}
+    #{@kinds.map(&:titleize).join(", ")}
 
 .organized-messages
   #map
